--- a/FreeAIr/Resources/Resources.ru.resx
+++ b/FreeAIr/Resources/Resources.ru.resx
@@ -136,7 +136,7 @@
     <value>Сгенерируй набор юнит тестов для следующего кода. Приведи в ответе только один фрагмент кода без дополнительной информации. Добавь комментарии для каждого теста, в котором описывается,что тест проверяет. Напиши код для тестового фреймворка {0}.</value>
   </data>
   <data name="ChatKindEnum_SuggestWholeLine" xml:space="preserve">
-    <value>Предложи заполнение целой строки в то месте, где написано `{0}` в следующем коде. Дай в своем ответе только код без дополнительной информации. Не оборачивай весь свой ответ в любые кавычки.</value>
+    <value>Предложи дополнение целой строки в том месте, где написано `{0}` в следующем коде. Дай в своем ответе только новый код без дополнительной информации и без того кода, что дал я.</value>
   </data>
   <data name="ChatKindEnum_SuggestWholeLine_Anchor" xml:space="preserve">
     <value>&lt;｜fim▁hole｜&gt;</value>
