--- a/FreeAIr/Resources/Resources.ru.resx
+++ b/FreeAIr/Resources/Resources.ru.resx
@@ -133,7 +133,7 @@
     <value>Оптимизируй следующий код:</value>
   </data>
   <data name="ChatKindEnum_GenerateUnitTests" xml:space="preserve">
-    <value>Сгенерируй набор юнит тестов для следующего кода. Приведи в ответе только один фрагмент кода без дополнительной информации. Добавь комментарии для каждого теста, в котором описывается,что тест проверяет. Напиши код для тестового фреймворка {0}.</value>
+    <value>Сгенерируй набор юнит тестов для следующего кода. Приведи в ответе только один фрагмент кода без дополнительной информации. Добавь XML комментарии для каждого теста, в котором описывается,что тест проверяет. Напиши код для тестового фреймворка {0}.</value>
   </data>
   <data name="ChatKindEnum_SuggestWholeLine" xml:space="preserve">
     <value>Предложи дополнение целой строки в том месте, где написано `{0}` в следующем коде. Дай в своем ответе только новый код без дополнительной информации и без того кода, что дал я.</value>
