--- a/FreeAIr/Resources/Resources.resx
+++ b/FreeAIr/Resources/Resources.resx
@@ -177,4 +177,7 @@
   <data name="UI_StopWaiting" xml:space="preserve">
     <value>Stop</value>
   </data>
+  <data name="ChatKindEnum_FixBuildError" xml:space="preserve">
+    <value>The compiler reported an error in the source code. Help fix the code. Error: </value>
+  </data>
 </root>
