--- a/FreeAIr/Resources/Resources.ru.resx
+++ b/FreeAIr/Resources/Resources.ru.resx
@@ -135,10 +135,10 @@
   <data name="ChatKindEnum_GenerateUnitTests" xml:space="preserve">
     <value>Сгенерируй набор юнит тестов для следующего кода. Приведи в ответе только один фрагмент кода без дополнительной информации. Добавь XML комментарии для каждого теста, в котором описывается,что тест проверяет. Напиши код для тестового фреймворка {0}.</value>
   </data>
-  <data name="ChatKindEnum_SuggestWholeLine" xml:space="preserve">
+  <data name="SuggestWholeLine" xml:space="preserve">
     <value>Предложи дополнение целой строки в том месте, где написано `{0}` в следующем коде. Дай в своем ответе только новый код без дополнительной информации и без того кода, что дал я.</value>
   </data>
-  <data name="ChatKindEnum_SuggestWholeLine_Anchor" xml:space="preserve">
+  <data name="SuggestWholeLine_Anchor" xml:space="preserve">
     <value>&lt;｜fim▁hole｜&gt;</value>
   </data>
   <data name="Code_NoSelectedCode" xml:space="preserve">
@@ -179,9 +179,5 @@
   </data>
   <data name="ChatKindEnum_FixBuildError" xml:space="preserve">
     <value>Компилятор сообщил об ошибке в исходном коде. Помоги исправить код. Ошибка: </value>
-  </data>
-  <data name="ChatKindEnum_NaturalLanguageSearch" xml:space="preserve">
-    <value>Используя данный тебе поисковый запрос, внимательно изучи все приложенные файлы и найди все места, которые соответствуют запросу. Твой ответ должен быть в виде списка в следующем JSON формате: `{ "matches": [ {"fullpath": "full path to the file", "found_text":"a matched word sequence from document",  "confidence_level":a_level_of_your_confidence, "line":line_number_of_found_text, "reason":"a reason why you include this item to your result"} ] }`. `found_text` - 5-10 слов из документа, которые по твоему мнению соответствуют поисковому запросу, `confidence_level` - это целое число, уровень твоей уверенности, что `found_text` соответствует поисковому запросу, где 0 - минимальная уверенность, 100 - максимальная уверенность, `line_number` - это номер строки, где найден `found_text`.
-Поисковый запрос:</value>
   </data>
 </root>
